# prism

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  docker-compose.e2e.yml  docker-compose.yml
.agents/skills/audit/: SKILL.md
.agents/skills/dashboard-control-plane/: SKILL.md
.agents/skills/diagnose/: SKILL.md
.agents/skills/doc-audit/: SKILL.md
.agents/skills/issues/: SKILL.md
.agents/skills/lint/: SKILL.md
.agents/skills/merge/: SKILL.md
.agents/skills/review/: SKILL.md
.agents/skills/ship/: SKILL.md
.agents/skills/spec/: SKILL.md
.agents/skills/test/: SKILL.md
.cargo/: audit.toml
.claude/: settings.json
.claude/commands/: audit.md  dashboard-control-plane.md  deps.md  diagnose.md  doc-audit.md  implement.md  issues.md  lint.md  merge.md  retro.md  review.md  ship.md  sync-commands.md  test.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  ci.yml  claude.yml  e2e.yml  security.yml
.opencode/commands/: audit.md  dashboard-control-plane.md  deps.md  diagnose.md  doc-audit.md  issues.md  lint.md  merge.md  review.md  ship.md  spec.md  test.md
crates/core/: Cargo.toml
crates/core/src/: audit.rs  auth_key.rs  auth_profile.rs  cache.rs  cloak.rs  config.rs  cost.rs  credential_source.rs  error.rs  file_audit.rs  glob.rs  lib.rs  memory_log_store.rs  prometheus.rs  provider.rs  proxy.rs  rate_limit.rs  request_log.rs  request_record.rs  thinking_cache.rs
crates/core/src/lifecycle/: logging.rs  pid_file.rs
crates/core/src/presentation/: protected.rs
crates/core/src/routing/: explain.rs  match_engine.rs  mod.rs  model_resolver.rs  planner.rs  types.rs
crates/domain/: Cargo.toml
crates/domain/src/: capability.rs  content.rs  error.rs  event.rs  lib.rs  operation.rs  request.rs  response.rs  tool.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/src/: daemon.rs  lib.rs  notify.rs  signal.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: claude.rs  gemini.rs  lib.rs  openai.rs
crates/protocol/tests/: golden.rs
crates/provider/: Cargo.toml
crates/provider/src/: catalog.rs  claude.rs  codex.rs  common.rs  gemini.rs  lib.rs  openai.rs  openai_compat.rs  routing.rs  sse.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  auth_runtime.rs  dispatch.rs  lib.rs  streaming.rs
crates/server/src/dispatch/: executor.rs  features.rs  helpers.rs  retry.rs  streaming.rs
crates/server/src/handler/: chat_completions.rs  completions.rs  count_tokens.rs  gemini.rs  health.rs  messages.rs  mod.rs  models.rs  provider_scoped.rs  responses.rs  responses_ws.rs
crates/server/src/handler/dashboard/: auth.rs  auth_keys.rs  auth_profiles.rs  config_ops.rs  config_tx.rs  control_plane.rs  logs.rs  mod.rs  providers.rs  routing.rs  system.rs  websocket.rs
crates/server/src/handler/dashboard/auth_profiles/: device_flow.rs  mod.rs  oauth.rs
crates/server/src/handler/dashboard/control_plane_workspace/: change_studio.rs  command_center.rs  mod.rs  provider_atlas.rs  route_studio.rs  shared.rs  traffic_lab.rs  types.rs
crates/server/src/handler/dashboard/providers/: mod.rs  probe.rs
crates/server/src/handler/dashboard/providers/mutation/: entry.rs  mod.rs  request.rs
crates/server/src/handler/dashboard/providers/probe/: codex.rs  common.rs  health.rs  mod.rs  models.rs  test_request.rs
crates/server/src/middleware/: dashboard_auth.rs  mod.rs  rate_limit.rs  request_context.rs  request_logging.rs
crates/server/src/telemetry/: gateway_log_layer.rs  mod.rs  span_data.rs  visitors.rs
crates/server/tests/: dashboard_tests.rs
crates/translator/: Cargo.toml
crates/translator/src/: claude_to_openai.rs  claude_to_openai_request.rs  common.rs  gemini_to_openai.rs  gemini_to_openai_request.rs  lib.rs  openai_to_claude.rs  openai_to_claude_response.rs  openai_to_gemini.rs  openai_to_gemini_response.rs
crates/translator/tests/: roundtrip_tests.rs
crates/types/: Cargo.toml
crates/types/src/: format.rs
deploy/: docker-compose.yml
docs/: README.md
docs/design/prism-control-plane/: README.md  frontend-implementation-plan.md  rollout-strategy.md  rust-crate-boundary-review.md
docs/playbooks/: add-e2e-test.md  add-provider.md  add-translator.md  coding-agent-workflow.md  deploy-ssh-host.md  rename-project.md  repo-layout-and-artifacts.md
docs/reference/: api-surface.md  architecture.md
docs/reference/types/: config.md  enums.md  errors.md  provider.md
docs/specs/: _index.md
logs/audit/: audit-2026-03-02.jsonl
src/: app.rs  cli.rs  main.rs
tests/e2e/: bailian_tests.rs  claude_tests.rs  gemini_tests.rs  helpers.rs  main.rs  openai_tests.rs
tests/e2e-docker/: config.e2e.yaml  entrypoint.sh
tests/e2e-docker/lib/: helpers.sh
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web-v2/src/pages/: ChangeStudioPage.tsx  ProviderAtlasPage.tsx  RouteStudioPage.tsx
web/e2e/: dashboard.spec.ts  mock-codex-oauth.mjs  providers.mocked.spec.ts  start-prism-e2e.sh
web/e2e/fixtures/: prism.playwright.yaml
web/scripts/: real-flow-check.mjs
web/src/: App.css  App.tsx  index.css  styles.css
web/src/__tests__/: setup.ts
web/src/components/: AppShell.tsx  FilterSelect.tsx  JsonViewer.tsx  Layout.tsx  LogDrawer.tsx  MetricCard.tsx  PayloadViewer.tsx  ProtectedRoute.tsx  StatusBadge.tsx  TagList.tsx  TimeRangePicker.tsx  TopList.tsx
web/src/hooks/: useChangeStudioController.test.tsx  useChangeStudioController.ts  useInspectorAction.ts  useProviderAtlasController.ts  useWebSocket.ts
web/src/lib/: authProfileDraft.ts  browser.ts  operatorPresentation.ts  payloadInspector.ts  selection.test.ts  selection.ts
web/src/pages/: AuthKeys.tsx  AuthProfileCallback.tsx  AuthProfiles.tsx  ChangeStudioPage.tsx  CommandCenterPage.tsx  Config.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Metrics.tsx  ModelsCapabilities.tsx  Overview.tsx  Protocols.tsx  ProviderAtlasPage.tsx  Providers.tsx  Replay.tsx  (+6 more)
(+154 files in other folders)
