[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/lifecycle",
    "crates/core",
    "crates/provider",
    "crates/translator",
    "crates/server",
]

[package]
name = "prism"
version = "0.1.0"
edition = "2024"

[dependencies]
prism-server = { workspace = true }
prism-lifecycle = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
bcrypt = { workspace = true }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
rand = "0.10"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = "0.1"
futures = "0.3"
notify = "8"
arc-swap = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dotenvy = "0.15"
sha2 = "0.10"
rustls = "0.23"
rustls-pki-types = "1"
tokio-rustls = "0.26"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
fork = "0.6"
sd-notify = "0.4"
tracing-appender = "0.2"
libc = "0.2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.19"
moka = { version = "0.12", features = ["future"] }

# workspace internal
prism-types = { path = "crates/types", default-features = false }
prism-lifecycle = { path = "crates/lifecycle" }
prism-core = { path = "crates/core" }
prism-provider = { path = "crates/provider" }
prism-translator = { path = "crates/translator" }
prism-server = { path = "crates/server" }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
prism-core = { workspace = true }
prism-provider = { workspace = true }
prism-translator = { workspace = true }
prism-server = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
