[package]
name = "ai-proxy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
url = "2"
regex = { workspace = true }
rand = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
sd-notify = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
fork = { workspace = true }

jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

[dev-dependencies]
tempfile = "3"
