[package]
name = "prism-core"
version = "0.1.0"
edition = "2024"

[dependencies]
prism-types = { workspace = true, features = ["reqwest", "axum"] }
prism-lifecycle = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
url = "2"
regex = { workspace = true }
rand = { workspace = true }
moka = { workspace = true }

[dev-dependencies]
tempfile = "3"
