[package]
name = "prism-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
prism-domain = { workspace = true }
prism-protocol = { workspace = true }
prism-core = { workspace = true }
prism-provider = { workspace = true }
prism-translator = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
reqwest = { workspace = true }
prism-lifecycle = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
base64 = "0.22"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
