[package]
name = "prism-translator"
version = "0.1.0"
edition = "2024"

[dependencies]
prism-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert-json-diff = "2"
